Created a hero class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,56 @@
             </div>
         </div>
     </nav>
+<section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Creative Developer</h1>
+            <p>Crafting digital experiences with passion and precision</p>
+            <img src="pkoto.jpg" alt="Creative Developer" class="hero-image" width="200px" height="200px">
+            <a href="#about" class="cta-btn">Explore My Work</a>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <div class="about-content">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>I am Harsh Raj, a second-year B.Tech student at Ajay Kumar Garg Engineering College (AKGEC), specializing in Computer Science and Engineering. I am passionate about technology, programming, and problem-solving, with growing skills in Java, C, web development (HTML, CSS, JavaScript), and cloud computing. Currently, I am enhancing my knowledge in Data Structures & Algorithms and exploring areas like blockchain and cloud technologies.</p>
+                <div class="skills">
+                    <span class="skill-tag">HTML5</span>
+                    <span class="skill-tag">CSS3</span>
+                    <span class="skill-tag">JavaScript</span>
+                    <span class="skill-tag">Git</span>
+                    <span class="skill-tag">Responsive Design</span>
+                </div>
+            </div>
+            <div class="about-visual">
+                <div class="code-block">
+                    <div style="color: #667eea;">const</div>
+                    <div style="color: #f5576c;">developer</div>
+                    <div style="color: #fff;"> = {</div>
+                    <div style="color: #764ba2;">  name: 'Creative'</div>
+                    <div style="color: #fff;">}</div>
+                </div>
+                <div class="code-block">
+                    <div style="color: #f5576c;">function</div>
+                    <div style="color: #667eea;">createMagic</div>
+                    <div style="color: #fff;">() {</div>
+                    <div style="color: #764ba2;">  return 'Amazing';</div>
+                    <div style="color: #fff;">}</div>
+                </div>
+                <div class="code-block">
+                    <div style="color: #667eea;">&lt;div</div>
+                    <div style="color: #f5576c;">class</div>
+                    <div style="color: #fff;">="interactive"&gt;</div>
+                    <div style="color: #764ba2;">  Hello World!</div>
+                    <div style="color: #667eea;">&lt;/div&gt;</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     
 </body>
+
 </html>
