Added my profile pic

--- a/index.html
+++ b/index.html
@@ -79,8 +79,58 @@
     </section>
 
 
+    <section class="gallery" id="gallery">
+    <h2>Skills</h2>
+    <div class="gallery-grid">
+
+        <div class="gallery-item">
+            <span class="icon">☕</span>
+            <h3>Java</h3>
+            <p>currently pursuing Data Structures & Algorithms (arrays, strings, linked lists, stacks, queues, recursion, sorting)..</p>
+        </div>
+
+        <div class="gallery-item">
+            <span class="icon">🔧</span>
+            <h3>C Language</h3>
+            <p>Strong understanding of fundamentals, data types, functions, pointers, and problem-solving using C.</p>
+        </div>
+
+        <div class="gallery-item">
+            <span class="icon">🌐</span>
+            <h3>HTML & CSS</h3>
+            <p>Responsive web design and layout structuring using semantic HTML and styled components.</p>
+        </div>
+
+        <div class="gallery-item">
+            <span class="icon">📜</span>
+            <h3>JavaScript (Basic)</h3>
+            <p>Interactive web elements and basic DOM manipulation for dynamic user experiences.</p>
+        </div>
+
+        <div class="gallery-item">
+            <span class="icon">☁️</span>
+            <h3>Cloud Computing (Basic)</h3>
+            <p>Engaged in Oracle’s global Race to Certification program, gaining hands-on experience in Oracle Cloud Infrastructure .</p>
+        </div>
+        <div class="gallery-item" onclick="window.open('https://www.canva.com', '_blank')">
+            <span class="icon">🎨</span><h3>Canva Creations</h3>
+            <p>Ability to create posters, presentations, and social media designs using templates and customization tools.</p></div>
+<div class="gallery-item" onclick="window.open('https://www.adobe.com/products/photoshop.html', '_blank')"><span class="icon">🖌️</span><h3>Photoshop</h3>
+    <p>Familiar with photo editing, retouching, and basic graphic design such as color correction, layering, and text effects.</p></div>
+<div class="gallery-item">
+    <span class="icon">🎬</span>
+    <h3>Clipchamp Edits</h3>
+    <p>Gameplay edits using Clipchamp featuring <strong>Prince of Persia: The Forgotten Sands</strong>.</p>
+    <a href="https://youtube.com/playlist?list=PLKwoHNCBa4ACdLnTeCjywe-5hIPHmZUp-&si=o3CV7TkplmkMvM2-" target="_blank" style="font-size: 1.5em; text-decoration: none;">🎮 Watch Playlist</a>
+</div>
+
+    </div>
+    
+</section>
+
     
 </body>
 
 </html>
+
 
